[package]
name = "rotate_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytemuck = "1.13.0"
image = "0.24.5"
pollster = "0.3.0"
wgpu = { version="0.15.1", features=["trace"]}
