[package]
name = "rotate_calc"
version = "0.0.2"
edition = "2021"
description = "Automatically aligns images"
repository = "https://github.com/RossSmyth/ImageRotate/"
readme = "README.md"
license = "BlueOak-1.0.0"

exclude = [
  "/.github/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytemuck = "1.13.0"
crevice = "0.12.0"
env_logger = "0.10.0"
image = "0.24.5"
log = "0.4.17"
pollster = "0.3.0"
wgpu = { version="0.15.1", features=["trace"]}
